# segmentation_investigation

./: .gitignore  .swn  CMakeLists.txt  LICENSE  README.md  histogram_edge_blobs.cpp
depth_experiments/: depth_experiments.cpp
depth_experiments/include/: depth_experiments.h
include/: histogram_edge_blobs.h
kmeans_clustering_experimental/: kmeans_clustering_experimental.cpp
kmeans_clustering_experimental/include/: kmeans_clustering_experimental.h
otsu_thresholding_experimental/: CMakeLists.txt  otsu_thresholding_experimental.cpp
otsu_thresholding_experimental/include/: otsu_thresholding_experimental.h
region_growing_experimental/: region_growing.py  segmentations.py
region_growing_experimental/standard_deviation_example/: .std_example.cpp.swm  .std_example.cpp.swn  std_example.cpp
region_growing_experimental/standard_deviation_example/utilities/: haralickfeature_extractor.cpp
watershed/: watershed  watershed.cpp
